beginning to work on pop transition

--- a/client/Thesis/Thesis/Base.lproj/Main.storyboard
+++ b/client/Thesis/Thesis/Base.lproj/Main.storyboard
@@ -304,7 +304,7 @@
         <!--Levels-->
         <scene sceneID="mTs-UA-ous">
             <objects>
-                <viewController id="Tzp-To-mNT" customClass="LevelPickerViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LevelPickerVC" id="Tzp-To-mNT" customClass="LevelPickerViewController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="aT0-iw-nlm"/>
                         <viewControllerLayoutGuide type="bottom" id="XbL-UH-PE1"/>
