--- a/client/Thesis/Thesis/Base.lproj/Main.storyboard
+++ b/client/Thesis/Thesis/Base.lproj/Main.storyboard
@@ -427,7 +427,7 @@
         <!--Levels-->
         <scene sceneID="Oct-LH-Jpz">
             <objects>
-                <navigationController id="cHU-Pl-GBJ" sceneMemberID="viewController">
+                <navigationController id="cHU-Pl-GBJ" customClass="LevelNavController" customModule="Moot" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Levels" image="categorize" id="YNz-gQ-S2B" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
                         <connections>
                             <outlet property="animation" destination="Ia4-KO-jBd" id="LQh-6V-Gf4"/>
