--- a/client/Thesis/Thesis/Base.lproj/Main.storyboard
+++ b/client/Thesis/Thesis/Base.lproj/Main.storyboard
@@ -521,7 +521,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KTD-9w-eI5">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KTD-9w-eI5">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -537,6 +537,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="KTD-9w-eI5" secondAttribute="trailing" constant="-20" id="G6f-Aa-T6E"/>
+                            <constraint firstItem="KTD-9w-eI5" firstAttribute="leading" secondItem="Dkg-iW-42Q" secondAttribute="leadingMargin" constant="-20" id="iYm-Ug-WUX"/>
+                            <constraint firstItem="c9q-af-MgP" firstAttribute="top" secondItem="KTD-9w-eI5" secondAttribute="bottom" id="u7z-FS-NFd"/>
+                            <constraint firstItem="KTD-9w-eI5" firstAttribute="top" secondItem="Dkg-iW-42Q" secondAttribute="topMargin" id="z1J-DK-NIK"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="KTD-9w-eI5" id="Mmc-QE-TWu"/>
